inspiration countainer add

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <img src="assets/Group 3.png">
                     </div>
                     <div>
-                      <h4 class="coding-head">I will help People by creating Modern Web System</h4>  
+                      <h4 class="coding-head">I will help People by creating Modern <br> Web System</h4>  
                       <p class="coding-para"> Develop platforms for people to find and join support groups for various issues, such as mental health, addiction recovery, or chronic illnesses.</p>
                       <button class="box">Learn More</button>
                     </div>
@@ -58,6 +58,16 @@
                         <img src="assets/Group 4.png">
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="my-inspiration">
+            <div class="my-inspiration-discription">
+                <h2 class="inspiration-head">My Inspiration</h2>
+                <p class="inspiration-para">my inspiration from Jhankar Mahbub to build a successful and fulfilling career in web development.Jhankar Mahbub, with his contributions and achievements in web development, can be a powerful source of inspiration
+                </p>
+            </div>
+            <div class="inspiration-vedio">
+                <iframe width="1076" height="550" src="https://www.youtube.com/embed/i4laq6e_B6U?si=TbNoFmwxZlUCKKPL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
