target contener add

--- a/index.html
+++ b/index.html
@@ -67,7 +67,39 @@
                 </p>
             </div>
             <div class="inspiration-vedio">
-                <iframe width="1076" height="550" src="https://www.youtube.com/embed/i4laq6e_B6U?si=TbNoFmwxZlUCKKPL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="995" height="550" src="https://www.youtube.com/embed/i4laq6e_B6U?si=TbNoFmwxZlUCKKPL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+        <section>
+            <div class="target-section">
+                <div class="target-description">
+                    <h2 class="target-head">My Current Target</h2>
+                    <p class="target-para">Join web development communities, attend meetups, and participate in hackathons to connect with other professionals and learn from their experiences.</p>
+                </div>
+                <div class="target-container">
+                    <div class="html-container">
+                    <div >
+                        <img src="assets/html.png">
+                    <h4 class="html-head">html</h4>
+                    <p class="html-para" > HTML provides the basic structure of web pages. It acts as the  defining elements like headings, paragraphs, images, and links</p>
+                    <a  class="html-learn"  "https://www.w3schools.com/html/">Learn More</a>
+                </div>
+            </div>
+                    <div class="css-container">
+                        <img src="assets/css.png">
+                    <h4 class="html-head">CSS</h4>
+                    <p  class="html-para"> CSS makes it easier to maintain and update the design of a website. CSS separates the content from the presentation styling</p>
+                    <a   class="html-learn" href="https://www.w3schools.com/css/">Learn More</a>
+                </div>
+                    <div class="java-container">
+                        <img src="assets/js.png">
+                    <h4 class="html-head">JavaScript</h4>
+                    <p class="html-para">
+                        JavaScript enables the creation of dynamic web pages that can update and change without reloading the page.
+                    </p>
+                    <a class="html-learn" href="https://www.w3schools.com/js/">learn more</a>
+                </div>
+            </div>
             </div>
         </section>
     </main>
