--- a/index.html
+++ b/index.html
@@ -119,6 +119,20 @@
     </div>
        </section>
         </main>
+        <footer>
+            <div class="footer">
+                <div>An Open Commitment by Jannatul fardous</div>
+                <div>
+                    <nav>
+                        <ul>
+                            <li><a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png"></a></li>
+                            <li><a href="https://github.com/" target="_blank"><img src="assets/github.png"></a></li>
+                            <li><a href="https://bd.linkedin.com/" target="_blank"><img src="assets/linkedin-icon 1.png"></a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </footer>
 
         
    
