--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             <h1 class="devloper-head">"In the near future, I hope to 
                 become a Developer."</h1>
                 <p class="devlop-paragraph"> working with technology, have a passion for problem-solving and creativity, and appreciate the idea of building things that people use and value, web development can be a highly rewarding career path.</p>
-                <div class="div-btn"><button class="btn">
+                <div class="div-btn">
+                    <a href="another-page.html"><button class="btn">
                     Contact with me
-                </button></div>
+                </button></div></a>
         </div>
     </header>
     <main>
