--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>web devloper</title>
     <link rel="stylesheet" href="styl/style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
                 become a Developer."</h1>
                 <p class="devlop-paragraph"> working with technology, have a passion for problem-solving and creativity, and appreciate the idea of building things that people use and value, web development can be a highly rewarding career path.</p>
                 <div class="div-btn">
-                    <a href="another-page.html"><button class="btn">
+                    <a href="another-page.html" target="_blank"><button class="btn">
                     Contact with me
                 </button></div></a>
         </div>
