--- a/another-page.html
+++ b/another-page.html
@@ -20,6 +20,7 @@
                 </nav>
             </div>
         </div>
+      <div >  <a href="index.html"><button class="back">Back</button></a></div>
     </footer>
 </body>
 </html>
